--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
                 should I know in order to
                 participate? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
-                <p>any programming language is fine in order to participate</p>
+                <p>any programming language is fine, in order to participate</p>
               </div>
             </li>
 
