--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
           <h1>Women Empowered</h1>
           <h2>
             WE a part of ME <br /><br />
-            STARLET is an Inclusive Pan India Hackathon for Women
-            and Other Gender Minorities 18th February 2023
+            STARLET is an Inclusive Pan India <b>Hybrid</b> Hackathon for Women
+            and Other Gender Minorities on 18th - 19th  February 2023
           </h2>
           <div class="d-flex flex-column justify-content-center justify-content-lg-start">
             <center>
               <!-- <a href="#" class="btn-get-started">Register</a> -->
-              <div class="apply-button" data-hackathon-slug="YOUR-HACKATHON-SLUG" data-button-theme="light"
+              <div class="apply-button" data-hackathon-slug="STARLET" data-button-theme="light"
                 style="height: 44px; width: 312px"></div>
             </center>
             <!-- <a
@@ -276,7 +276,7 @@
             </div>
             <center>
               <!-- <a href="#" class="btn-get-started">Register</a> -->
-              <div class="apply-button" data-hackathon-slug="YOUR-HACKATHON-SLUG" data-button-theme="light"
+              <div class="apply-button" data-hackathon-slug="STARLET" data-button-theme="light"
                 style="height: 44px; width: 312px"></div>
             </center>
           </div>
