heading "Starlet" added => logo dimesion corrected

--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1"
-          data-aos="fade-up" data-aos-delay="200">
-          <p>powered by,</p>
+        data-aos="fade-up" data-aos-delay="200">
+        <h1>STARLET</h1>
+        <p>powered by,</p>
           <h1>Women Empowered</h1>
           <h2>
             WE a part of ME <br /><br />
@@ -97,8 +98,9 @@
           <script src="https://cdn.logwork.com/widget/countdown.js"></script>
           <a href="https://logwork.com/countdown-x6y2" class="countdown-timer" data-style="circles"
             data-timezone="Asia/Kolkata" data-textcolor="#faf5f5" data-date="2023-02-18 10:00"
-            data-unitscolor="#f5f2f2">DAYS LEFT</a>
-
+            data-unitscolor="#f5f2f2"><h1 style="font-size: 18px;">Hack Begins In :</h1> </a>
+            <br>
+            <br>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="assets/img/hero-img.png" class="img-fluid animated" alt="" />
@@ -412,23 +414,23 @@
 
         <div class="d-flex align-items-center justify-content-evenly title_sponsors">
           <div>
+            <a href="https://fossunited.org/">
+              <img src="assets/img/clients/fossu.png" class="img-fluid" alt="" width="250" height="250"/>
+            </a>
+          </div>
+          <div>
             <a href="https://devfolio.co/discover">
-              <img src="assets/img/clients/devfolio.png" class="img-fluid" alt="" />
+              <img src="assets/img/clients/Devfolio_Logo-Colored@2x.png" class="img-fluid" alt="" width="350" height="350"/>
             </a>
           </div>
           <!-- <div>
               <a href="https://www.tinkerhub.org/">
                 <img src="assets/img/clients/tinkerhub.png" class="img-fluid" alt="" />
               </a>
-            </div>-->
-          <div>
-            <a href="https://fossunited.org/">
-              <img src="assets/img/clients/fossu.png" class="img-fluid" alt="" />
-            </a>
-          </div>
+            </div>-->          
           <div>
             <a href="https://www.wicys.org/">
-              <img src="assets/img/clients/WiCys.png" class="img-fluid" alt="" width="256" height="256" />
+              <img src="assets/img/clients/WiCys.png" class="img-fluid" alt="" width="300" height="300" />
             </a>
           </div>
         </div>
@@ -441,22 +443,22 @@
         <div class="d-flex align-items-center justify-content-evenly normal_sponsors">
           <div>
             <a href="https://polygon.technology/">
-              <img src="assets/img/clients/polygon.png" class="img-fluid" alt="" />
+              <img src="assets/img/clients/Polygon_Logo-Colored.svg" class="img-fluid" alt="" width="250" height="250"/>
             </a>
           </div>
           <div>
             <a href="https://filecoin.io/">
-              <img src="assets/img/clients/filecoin.png" class="img-fluid" alt="" />
+              <img src="assets/img/clients/filecoin.png" class="img-fluid" alt="" width="250" height="250"/>
             </a>
           </div>
           <div>
             <a href="https://replit.com/">
-              <img src="assets/img/clients/replit.png" class="img-fluid" alt="" />
+              <img src="assets/img/clients/replit.png" class="img-fluid" alt="" width="250" height="250"/>
             </a>
           </div>
           <div>
             <a href="https://solana.com/">
-              <img src="assets/img/clients/solana.png" class="img-fluid" alt="" />
+              <img src="assets/img/clients/solana.png" class="img-fluid" alt="" width="250" height="250"/>
             </a>
           </div>
         </div>
