--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
                 STARLET hackthon?
                 <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-4" class="collapse" data-bs-parent=".faq-list">
-                <p>Any student who identifies as a woman or a member of a minority gender.</p>
+                <p>Anyone who identifies as a woman or a member of a minority gender.</p>
               </div>
             </li>
 
