--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6 d-flex flex-column justify-content-center pt-3 pt-lg-0 order-2 order-lg-1"
+        <div class="col-lg-6 d-flex flex-column justify-content-center pt-2 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
           <h1>STARLET</h1>
           <p>powered by,</p>
@@ -400,8 +400,13 @@
           </div>
           <div class="col-lg-6 mt-4 mt-lg-0 " data-aos="fade-up" data-aos-delay="300">
             <div class="box">
-              <h3>Become a contributer</h3>
-              <h4>Amount above <sup>₹</sup>1000</h4>
+              <h3>Like to donate?</h3>
+              <h4>Any amount above <sup>₹</sup>1000</h4>
+              <ul>
+                <li><i class="bx bx-check"></i>Amount is utilised to support gender minorities and women in particular.</li>
+                <li><i class="bx bx-check"></i> contributions are eligible for deductions under sec 80G of the Income Tax Act.</li>
+                
+              </ul>
               <a href="#contact" class="buy-btn">Get Started</a>
             </div>
           </div>
@@ -583,18 +588,18 @@
                   ANNOUNCE SOON
                 </p>
               </div>
-
+            
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
                 <p>meteam@mind-empowered.org</p>
               </div>
 
-              <!-- <div class="phone">
+              <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+91</p>
-                </div> -->
+                  <p><a href="tel:+919562784981" style="color: #16489f">+919562784981</a></p>
+                </div>
               <!-- <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3928.7068385849166!2d76.32596341495108!3d10.041032575081049!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c38238a5fa1%3A0x49d15730ab604350!2sCITTIC!5e0!3m2!1sen!2sin!4v1668252523988!5m2!1sen!2sin"
                 frameborder="0" style="border: 0; width: 100%; height: 290px" allowfullscreen loading="lazy"
