--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   Tax Act.</li>
 
               </ul>
-              <button onclick="openpopup()" class="popbtn">Get Started</button>
+              <button onclick="openpopup()" class="popbtn" >Get Started</button>
               <div class="popup" id="popup">
                 <h1><b><u>NGO BANK DETAILS</u></b></h1>
                 <table style="justify-content: center;align-items: center;
@@ -433,7 +433,7 @@
       
       </div>
       
-      <br /><br />
+      <br />
 
       <div class="row">
         <div class="section-title">
@@ -449,12 +449,30 @@
           </div>
           <div>
             <a href="https://www.wicys.org/">
-              <img src="assets/img/clients/WiCys.png" class="img-fluid" alt="" width="300" height="300" />
+              <img src="assets/img/clients/wi-svg (1).jpg" class="img-fluid" alt="" width="400" height="400" />
             </a>
           </div>
         </div>
       </div>
-      <br /><br />
+      <br />
+      <div class="row">
+        <div class="section-title">
+          <h2>Sponsers</h2>
+        </div>
+        <div class="d-flex align-items-center justify-content-evenly normal_sponsors">
+          <div>
+            <a href="https://slbs.in/">
+              <img src="assets/img/clients/slbs.jpeg" class="img-fluid" alt="" width="250" height="250" />
+            </a>
+          </div>
+          <div>
+            <a href="">
+              <img src="assets/img/clients/c20-removebg-preview.png" class="img-fluid" alt="" width="150" height="150" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <br />
       <div class="row">
         <div class="section-title">
           <h2>Ecosystem Patner</h2>
@@ -462,8 +480,8 @@
         <div class="d-flex align-items-center justify-content-evenly normal_sponsors">
           <div>
             <a href="https://startupmission.kerala.gov.in/">
-              <img src="assets/img/clients/Start_up_Mission_Logo_small_png.png" class="img-fluid" alt="" width="250"
-                height="250" />
+              <img src="assets/img/clients/Start_up_Mission_Logo_small_png.png" class="img-fluid" alt="" width="300"
+                height="300" />
             </a>
           </div>
 
@@ -556,6 +574,14 @@
               <div id="faq-list-7" class="collapse" data-bs-parent=".faq-list">
                 <p>Absolutely. We will have mentors and resource available. Come learn and experience your first
                   hackathon at STARLET. </p>
+              </div>
+            </li>
+            <li data-aos="fade-up" data-aos-delay="500">
+              <i class="bx bx-help-circle icon-help"></i>
+              <a data-bs-toggle="collapse" data-bs-target="#faq-list-8" class="collapsed">Is the team leader the only one who wants to register? 
+                <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <div id="faq-list-8" class="collapse" data-bs-parent=".faq-list">
+                <p>No. Registration is individual. You can form your team on the day of the hackathon.  </p>
               </div>
             </li>
           </ul>
