spelling mistake correction

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
       <br />
       <div class="row">
         <div class="section-title">
-          <h2>Sponsers</h2>
+          <h2>Sponsors</h2>
         </div>
         <div class="d-flex align-items-center justify-content-evenly normal_sponsors">
           <div>
