--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <!-- <li><a class="nav-link scrollto" href="#PRIZE">Prizes</a></li> -->
-
+          <li><a class="nav-link scrollto" href="#pricing">Sponsors</a></li>
           <li><a class="nav-link scrollto" href="#faq">FAQs</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li>
