new sponsor added

--- a/index.html
+++ b/index.html
@@ -351,6 +351,12 @@
                 height="150" />
             </a>
           </div>
+          <div>
+            <a href="https://pehia.org/">
+              <img src="assets/img/clients/Pehiya.png" class="img-fluid" alt="" width="450"
+                height="450" />
+            </a>
+          </div>
         </div>
       </div>
       <br />
