new sponser kite added

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
             </a>
           </div>
           <div>
-            <a href="https://pehia.org/">
+            <a href="https://kitesfoundation.org/">
               <img src="assets/img/clients/Kites right.png" class="img-fluid" alt="" width="300"
                 height="300" />
             </a>
