--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
           </h2>
 
           <center>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSftZjgpCKsT3HkNM8WzNnKDpHcS32kOdMLrPxTZeDmU6ZCk3Q/viewform?usp=sf_link"
-              class="regbtn">Register Now</a>
+            <a href="#"
+              class="regbtn">Register Ended</a>
           </center>
 
           <br>
-          <script src="https://cdn.logwork.com/widget/countdown.js"></script>
+          <!-- <script src="https://cdn.logwork.com/widget/countdown.js"></script>
           <a href="https://logwork.com/countdown-x6y2" class="countdown-timer" data-style="circles"
             data-timezone="Asia/Kolkata" data-textcolor="#faf5f5" data-date="2023-02-12 22:00"
             data-unitscolor="#f5f2f2">
             <h1 style="font-size: 18px;"><b>Registration ends In :</b></h1>
-          </a>
+          </a> -->
           <br>
           <br>
         </div>
@@ -279,10 +279,10 @@
 
               </ul>
             </div>
-            <center>
+            <!-- <center>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSftZjgpCKsT3HkNM8WzNnKDpHcS32kOdMLrPxTZeDmU6ZCk3Q/viewform?usp=sf_link"
                 class="regbtn2">Register Now</a>
-            </center>
+            </center> -->
           </div>
           <!-- 
           <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
@@ -623,6 +623,10 @@
             </li>
           </ul>
         </div>
+        <center>
+          <a href="https://wa.me/+919562784981"
+              class="queriesbtn">More Queries? Ask here</a>
+        </center>
       </div>
     </section>
     <!-- End Frequently Asked Questions Section -->
