--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
           </h2>
 
           <center>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSftZjgpCKsT3HkNM8WzNnKDpHcS32kOdMLrPxTZeDmU6ZCk3Q/viewform"
-              class="regbtn">Register Now For Free</a>
+            <a href="#"
+              class="regbtn">Registration Ended</a>
           </center>
 
           <br>
@@ -99,11 +99,11 @@
             data-unitscolor="#f5f2f2">
             <h1 style="font-size: 18px;"><b>Registration ends In :</b></h1>
           </a> -->
-          <script>(function (d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+          <!-- <script>(function (d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
           <a data-type="countdown" data-id="3853130" class="tickcounter"
             style="display: block; width: 100%; position: relative; padding-bottom: 25%" title="Countdown"
             href="//www.tickcounter.com/">Countdown</a>
-          <br>
+          <br> -->
           <br>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -283,10 +283,10 @@
 
               </ul>
             </div>
-            <center>
+            <!-- <center>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSftZjgpCKsT3HkNM8WzNnKDpHcS32kOdMLrPxTZeDmU6ZCk3Q/viewform?usp=sf_link"
                 class="regbtn2">Register Now</a>
-            </center>
+            </center> -->
           </div>
           <!-- 
           <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
