--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
             Place : <a
               href="https://www.google.com/maps/place/Kerala+Startup+Mission/@10.0554565,76.3524954,17z/data=!3m1!4b1!4m5!3m4!1s0x3b080c04e2534d9f:0x57a3a39e6b6b4514!8m2!3d10.0554565!4d76.3546841"
               style="color: rgba(255, 255, 255, 0.6);">Kerala Startup Mission, Kochi</a>
-            
+
           </h2>
 
           <center>
-            <a href="#"
-              class="regbtn">Registration Ended</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSftZjgpCKsT3HkNM8WzNnKDpHcS32kOdMLrPxTZeDmU6ZCk3Q/viewform?usp=sf_link"
+              class="regbtn">Register Now for free</a>
           </center>
 
           <br>
@@ -99,11 +99,11 @@
             data-unitscolor="#f5f2f2">
             <h1 style="font-size: 18px;"><b>Registration ends In :</b></h1>
           </a> -->
-          <!-- <script>(function (d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
-          <a data-type="countdown" data-id="3853130" class="tickcounter"
+          <script>(function (d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
+          <a data-type="countdown" data-id="3863528" class="tickcounter"
             style="display: block; width: 100%; position: relative; padding-bottom: 25%" title="Countdown"
             href="//www.tickcounter.com/">Countdown</a>
-          <br> -->
+          <br>
           <br>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
@@ -283,10 +283,10 @@
 
               </ul>
             </div>
-            <!-- <center>
+            <center>
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSftZjgpCKsT3HkNM8WzNnKDpHcS32kOdMLrPxTZeDmU6ZCk3Q/viewform?usp=sf_link"
                 class="regbtn2">Register Now</a>
-            </center> -->
+            </center>
           </div>
           <!-- 
           <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img"
