--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-2 pt-lg-0 order-2 order-lg-1"
           data-aos="fade-up" data-aos-delay="200">
           <h1>STARLET</h1>
-          <p>powered by, <b style="color: rgb(231, 224, 224);">Women Empowered</b></p>
+          <p>powered by <b style="color: rgb(231, 224, 224);">Mind Empowered</b></p>
           <h2>
             A <b>hybrid</b> hackathon for women
             and other gender minorities.</br></br>
