registration button link changed

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </h2>
 
           <center>
-            <a href="#" class="regbtn">Register Now for STARLET 2.0</a>
+            <a href="https://starlet.mind-empowered.org/" class="regbtn">Register Now for STARLET 2.0</a>
           </center>
 
           <br>
